# tiny-typescript-transpiler

./: .gitignore  Cargo.toml  README.md
crates/ast/: Cargo.toml
crates/ast/src/: char.rs  declaration.rs  expression.rs  kind.rs  lib.rs  macros.rs  statement.rs  token.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: errors.rs  main.rs  options.rs  output.rs
crates/node_derive/: Cargo.toml
crates/node_derive/src/: lib.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: error.rs  lib.rs  options.rs  source_file.rs
crates/transpiler/src/emitter/: declaration.rs  error.rs  expression.rs  function.rs  mod.rs  statement.rs
crates/transpiler/src/emitter/tests/: expression_statement.rs  function_declaration.rs  mod.rs  type_alias_declaration.rs  variable_statement.rs
crates/transpiler/src/lexer/: inputer.rs  mod.rs  reg.rs
crates/transpiler/src/lexer/tests/: function_declaration.rs  mod.rs  type_alias_declaration.rs  variable_statement.rs
crates/transpiler/src/parser/: declaration.rs  error.rs  expression.rs  function.rs  macros.rs  mod.rs  statement.rs  types.rs  utils.rs
crates/transpiler/src/parser/tests/: expression_statement.rs  function_declaration.rs  mod.rs  type_alias_declaration.rs  variable_statement.rs
crates/transpiler/src/transpile/: mod.rs
crates/transpiler/src/transpile/tests/: mod.rs  transpile_file.rs
examples/: index.ts  invalid.ts  unsupported.ts
